Fix line wrap

--- a/style.css
+++ b/style.css
@@ -126,12 +126,18 @@ img{
   *zoom:1;
 }
 
-@media only screen and (max-width:600px){
-  h2{
-    font-size: 1.5em;
-  }
+@media only screen and (max-width:800px){
   .img-container{
     float:none;
     width:100%;
+  }
+  h2{
+    white-space:nowrap;
+  }
+}
+
+@media only screen and (max-width:480px){
+  h2{
+    font-size: 1.5em;
   }
 }
